{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 409,
  "lineage": "5e90b624-a8ce-3e7a-242b-cb1ccc6e7eac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "es_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:652613197255:loadbalancer/net/asapflow-nlb/f84b5f46e381e6bc",
            "arn_suffix": "net/asapflow-nlb/f84b5f46e381e6bc",
            "dns_name": "asapflow-nlb-f84b5f46e381e6bc.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:652613197255:loadbalancer/net/asapflow-nlb/f84b5f46e381e6bc",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "asapflow-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a25520585372912b"
              }
            ],
            "subnets": [
              "subnet-0a25520585372912b"
            ],
            "tags": {
              "Environment": "hml"
            },
            "tags_all": {
              "Environment": "hml"
            },
            "vpc_id": "vpc-016047663e0ef25e7",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "es_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:652613197255:listener/net/asapflow-nlb/f84b5f46e381e6bc/cc6045504835a48e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:652613197255:targetgroup/asapflow-tg/1475042372e613a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:652613197255:listener/net/asapflow-nlb/f84b5f46e381e6bc/cc6045504835a48e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:652613197255:loadbalancer/net/asapflow-nlb/f84b5f46e381e6bc",
            "mutual_authentication": [],
            "port": 9200,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.es_nlb",
            "aws_lb_target_group.es_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "es_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:652613197255:targetgroup/asapflow-tg/1475042372e613a5",
            "arn_suffix": "targetgroup/asapflow-tg/1475042372e613a5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "9200",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:652613197255:targetgroup/asapflow-tg/1475042372e613a5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:652613197255:loadbalancer/net/asapflow-nlb/f84b5f46e381e6bc"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asapflow-tg",
            "port": 9200,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "hml"
            },
            "tags_all": {
              "Environment": "hml"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016047663e0ef25e7"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "es",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652613197255:security-group/sg-09861532822625f82",
            "description": "Elasticsearch 8 single-node access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09861532822625f82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Elasticsearch HTTP",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "asapflow-sg-20260126201854201000000004",
            "name_prefix": "asapflow-sg-",
            "owner_id": "652613197255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "hml",
              "Name": "asapflow-sg"
            },
            "tags_all": {
              "Environment": "hml",
              "Name": "asapflow-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016047663e0ef25e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "es_9200_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.125.0.0/16"
            ],
            "description": "Elasticsearch HTTP",
            "from_port": 9200,
            "id": "sgrule-4027104051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09861532822625f82",
            "security_group_rule_id": "sgr-0639b3294a5fceca1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access",
            "from_port": 22,
            "id": "sgrule-2244984477",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09861532822625f82",
            "security_group_rule_id": "sgr-09730aef0d39e0766",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.es"
          ]
        }
      ]
    }
  ]
}